<resources>
    <string name="app_name">SecureIt</string>
    <string name="selected_item">Selected item:</string>

    <string-array name="hash_algorithm">
        <item>MD5</item>
        <item>SHA-1</item>
        <item>SHA-224</item>
        <item>SHA-256</item>
        <item>SHA-384</item>
        <item>SHA-512</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_type_of_algorithm">Select The Type of Algorithm</string>
    <string name="generate">Generate</string>
    <string name="text_here">Text Here....</string>
    <string name="secure_it">Secure It</string>
    <string name="encrypted_text">Encrypted Text</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="text">Text</string>
    <string name="be_secure_with_secure_it">Be Secure with Secure It</string>
    <string name="made_by_tanvi_wakade">Made by Tanvi Wakade</string>
</resources>