<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".SuccessFragment">


    <TextView
        android:id="@+id/hash_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/encrypted_text"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/copy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/copy_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_blue"
        android:paddingStart="120dp"
        android:paddingEnd="120dp"
        android:text="@string/copy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/dark_blue"
        android:paddingStart="110dp"
        android:paddingEnd="110dp"
        android:text="@string/share"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_share"
        app:layout_constraintBottom_toTopOf="@+id/copy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hash_textView"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/include"
        layout="@layout/copied_message"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>